logout on endless loop

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         <script type="text/javascript" src="app/controllers/loginCtrl.js"></script>
         <script type="text/javascript" src="app/controllers/registerCtrl.js"></script>
         <script type="text/javascript" src="app/controllers/newCtrl.js"></script>
-        <script type="text/javascript" src="app/controllers/newCtrl.js"></script>
+        <script type="text/javascript" src="app/factories/dataFactory.js"></script>
+
+
     </body>
 </html>
