--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
     <head>
         <meta charset="utf-8">
         <title>Document</title>
-<!--        <link rel="stylesheet" type="text/css" href="css/style.css">-->
     </head>
     <body ng-app="AuthenticationApp">
        <h1>Testing</h1>
@@ -24,6 +23,7 @@
         <script type="text/javascript" src="app/controllers/registerCtrl.js"></script>
         <script type="text/javascript" src="app/controllers/newCtrl.js"></script>
         <script type="text/javascript" src="app/factories/dataFactory.js"></script>
+        <script type="text/javascript" src="app/controllers/notesCtrl.js"></script>
 
 
     </body>
